samples/_failures_safe/1761661562_dc029d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83919072.c: In function ‘main’:
./samples/SAFE/__tmp_83919072.c:142:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  142 |     int entry
      |     ^~~
./samples/SAFE/__tmp_83919072.c:142:5: error: expected declaration or statement at end of input
